fix(chatSidebar): fix styles, overflow, name ellipsis overflow

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -335,3 +335,7 @@ label {
     transform: translate3d(0, 0, 0), scale3d(1, 1, 1);
   }
 }
+
+pre[hidden] {
+  display: none;
+}
